--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   border-radius: 2rem;
   border: none;
   margin-bottom: 1rem;
+  padding: 1rem;
 }
 
 .input-contact::placeholder, textarea::placeholder {
@@ -41,7 +42,7 @@ body {
 
 .label-contact {
   font-weight: bold;
-  margin-bottom: 0.3rem;
+  margin-bottom: 0.8rem;
 }
 
 .select-contact, .message-contact {
@@ -49,6 +50,7 @@ body {
   border: none;
   text-align: center;
   margin-bottom: 1rem;
+  padding: 1rem;
 }
 
 .button-contact {
@@ -56,7 +58,8 @@ body {
   border: none;
   cursor: pointer;
   background-color: red;
-  margin: 1rem 3rem 0 3rem;
+  margin: 1rem 6rem;
+  padding: 1rem;
 }
 
 .button-contact:hover {
